--- a/Styles/Partials/_main.scss
+++ b/Styles/Partials/_main.scss
@@ -72,6 +72,7 @@
     .carousel {
         margin-left: auto;
         margin-right: auto;
+        margin-bottom: 2rem;
     }
 }
 
@@ -128,5 +129,30 @@
             margin-top: 3rem;
             margin-bottom: 3rem;
         }
+    }
+}
+
+//SMALL DESKTOP BREAKPOINT 
+
+@media (min-width: 1200px) {
+
+    .mainBody {
+        .navegacion {
+            .subNavegacion {
+                justify-content: space-between;
+
+                #btnAcerca,
+                #btnGaleria {
+                    margin-left: 1rem;
+                }
+
+                #btnLogros,
+                #btnContacto {
+                    margin-right: 1rem;
+                }
+            }
+        }
+
+
     }
 }
