--- a/Styles/style.css
+++ b/Styles/style.css
@@ -108,6 +108,7 @@ footer #footerRedes .footerBotonRedes .footerBotonRedesImg {
 .mainBody .carousel {
   margin-left: auto;
   margin-right: auto;
+  margin-bottom: 2rem;
 }
 
 @media (min-width: 768px) {
@@ -131,6 +132,19 @@ footer #footerRedes .footerBotonRedes .footerBotonRedesImg {
     font-size: 3rem;
     margin-top: 3rem;
     margin-bottom: 3rem;
+  }
+}
+@media (min-width: 1200px) {
+  .mainBody .navegacion .subNavegacion {
+    justify-content: space-between;
+  }
+  .mainBody .navegacion .subNavegacion #btnAcerca,
+  .mainBody .navegacion .subNavegacion #btnGaleria {
+    margin-left: 1rem;
+  }
+  .mainBody .navegacion .subNavegacion #btnLogros,
+  .mainBody .navegacion .subNavegacion #btnContacto {
+    margin-right: 1rem;
   }
 }
 * {
