--- a/Styles/Partials/_colors.scss
+++ b/Styles/Partials/_colors.scss
@@ -1,6 +1,6 @@
 $colorPrimario: #2e2e2e;
 $colorSecundario: #151515;
-$colorTerceario: #b4b4b4;
+$colorTerceario: #888888;
 $colorFuentePrimario: #eeeeee;
 $colorFuenteSecundario: #b4b4b4;
 $colorFuenteTerceario: #151515
