--- a/Styles/style.css
+++ b/Styles/style.css
@@ -26,9 +26,10 @@ footer #footerFederation {
 }
 footer #footerTexto {
   color: #b4b4b4;
+  text-align: center;
 }
 footer #footerRedes {
-  justify-content: space-around;
+  text-align: center;
 }
 footer #footerRedes .footerBotonRedes .footerBotonRedesImg {
   height: 3rem;
@@ -37,21 +38,51 @@ footer #footerRedes .footerBotonRedes .footerBotonRedesImg {
   margin-bottom: 2rem;
 }
 
-@media (min-width: 576px) {
+@media (min-width: 768px) {
+  footer #footerTexto {
+    font-size: 24px;
+    text-align: center;
+  }
+  footer #footerRedes .footerBotonRedes .footerBotonRedesImg {
+    height: 4rem;
+  }
+}
+@media (min-width: 1200px) {
   footer {
     margin-top: 8rem;
   }
   footer div #footerFederation {
-    height: 16rem;
+    height: 8re;
   }
   footer div #footerTexto {
-    font-size: 2rem;
+    font-size: 24px;
+  }
+  footer #footerRedes .footerBotonRedes {
+    text-align: center;
   }
   footer #footerRedes .footerBotonRedes .footerBotonRedesImg {
     height: 8rem;
     border-radius: 2rem;
     margin-top: 3rem;
     margin-bottom: 3rem;
+  }
+}
+@media (min-width: 1200px) {
+  footer #footerFederation {
+    height: 8rem;
+  }
+  footer #footerTexto {
+    font-size: 24px;
+    text-align: center;
+    margin-top: auto;
+    margin-bottom: auto;
+  }
+  footer #footerRedes {
+    margin-top: 2rem;
+  }
+  footer #footerRedes .footerBotonRedes .footerBotonRedesImg {
+    height: 4rem;
+    border-radius: 1rem;
   }
 }
 .mainBody {
@@ -74,7 +105,11 @@ footer #footerRedes .footerBotonRedes .footerBotonRedesImg {
   padding-bottom: 1rem;
   margin-top: 8px;
 }
-.mainBody .botonMain {
+.mainBody .navegacion {
+  padding-top: 1rem;
+  padding-bottom: 2rem;
+}
+.mainBody .navegacion .botonMain {
   background: linear-gradient(90deg, #151515 0%, #2e2e2e 45%);
   border: 2px solid rgb(255, 255, 255);
   padding: 1rem;
@@ -83,8 +118,8 @@ footer #footerRedes .footerBotonRedes .footerBotonRedesImg {
   font-size: 20px;
   font-weight: bold;
 }
-.mainBody .botonMain:hover {
-  background: linear-gradient(90deg, #b4b4b4 0%, rgba(255, 255, 255, 0) 60%);
+.mainBody .navegacion .botonMain:hover {
+  background: linear-gradient(90deg, #888888 0%, rgba(255, 255, 255, 0) 60%);
   border: 2px solid rgb(255, 255, 255);
   color: #151515;
 }
@@ -135,16 +170,48 @@ footer #footerRedes .footerBotonRedes .footerBotonRedesImg {
   }
 }
 @media (min-width: 1200px) {
+  .mainBody #grilla {
+    display: grid;
+    grid-template-areas: "navegacion federacionContenedor";
+    grid-template-columns: 37% 63%;
+  }
+  .mainBody .navegacion {
+    grid-area: navegacion;
+    background-color: #2e2e2e;
+  }
   .mainBody .navegacion .subNavegacion {
+    padding-left: 1rem;
     justify-content: space-between;
   }
-  .mainBody .navegacion .subNavegacion #btnAcerca,
-  .mainBody .navegacion .subNavegacion #btnGaleria {
-    margin-left: 1rem;
+  .mainBody .navegacion .subNavegacion .botonMain {
+    height: 4rem;
+    padding: 1rem;
+    margin-bottom: 0px;
   }
-  .mainBody .navegacion .subNavegacion #btnLogros,
-  .mainBody .navegacion .subNavegacion #btnContacto {
-    margin-right: 1rem;
+  .mainBody .federacionContenedor {
+    margin-top: auto;
+    margin-bottom: auto;
+  }
+  .mainBody .federacionContenedor .federacionSubContenedor #federacionImagen {
+    margin-left: auto;
+    margin-right: auto;
+    height: 10rem;
+    width: auto;
+  }
+  .mainBody .federacionContenedor .federacionSubContenedor #federacionTexto {
+    font-size: 24px;
+  }
+  .mainBody #novedades {
+    font-size: 2rem;
+  }
+  .mainBody .carousel {
+    margin-left: auto;
+    width: 40%;
+  }
+}
+@media (min-width: 1400px) {
+  .mainBody .mainImage {
+    padding-bottom: 40rem;
   }
 }
 * {
