--- a/Styles/Partials/_extends.scss
+++ b/Styles/Partials/_extends.scss
@@ -12,3 +12,10 @@
     font-weight: bold;
     text-align: center;
 }
+
+%bordeBoton {
+    border-bottom: 2px solid rgb(255, 255, 255);
+    border-top: 2px solid rgb(255, 255, 255);
+    border-left: 2px solid rgb(255, 255, 255);
+    border-right: 2px solid rgb(255, 255, 255);
+}
