se terminó con el breakpoint 02

--- a/Styles/Partials/_colors.scss
+++ b/Styles/Partials/_colors.scss
@@ -1,6 +1,7 @@
 $colorPrimario: #2e2e2e;
 $colorSecundario: #151515;
-$colorTerceario: #888888;
+$colorTerceario: #545454;
+$colorCuaternario: #bbbbbb;
 $colorFuentePrimario: #eeeeee;
 $colorFuenteSecundario: #b4b4b4;
 $colorFuenteTerceario: #151515
