--- a/Styles/style.scss
+++ b/Styles/style.scss
@@ -2,7 +2,9 @@
 "./Partials/extends",
 "./Partials/header",
 "./Partials/footer",
-"./Partials/main";
+"./Partials/main",
+"./Partials/about";
+
 
 * {
     margin: 0;
