--- a/Styles/Partials/_footer.scss
+++ b/Styles/Partials/_footer.scss
@@ -1,5 +1,7 @@
+//MOBILE FIRST
 footer {
     background-color: $colorSecundario;
+    margin-top: 2rem;
 
 
     #footerFederation {
@@ -31,8 +33,8 @@ footer {
         }
     }
 }
-
 //END MOBILE FIRST
+
 
 
 //LARGE TABLET BREAKPOINT
@@ -64,7 +66,7 @@ footer {
         div {
 
             #footerFederation {
-                height: 8re;
+                height: 8rem;
             }
 
             #footerTexto {
